# camouflage-tls

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.py  cpplint.py
.github/workflows/: main.yml
example/: CMakeLists.txt  base_example.cpp
include/camouflage/tls/: builder.hpp  types.hpp  utils.h  utils.hpp
include/camouflage/tls/browsers/: base_browser_builder.hpp  firefox.hpp  google_chrome.h  google_chrome.hpp  safari.hpp  yandex_browser.h  yandex_browser.hpp
src/: builder.cpp  utils.cpp
src/browsers/: handshake_data.h
src/browsers/firefox/: firefox_builder.cpp  firefox_builder.h  firefox_builder.hpp
src/browsers/firefox/versions/firefox_149_0/: firefox_149_0.hpp
src/browsers/google_chrome/: google_chrome_builder.cpp  google_chrome_builder.h  google_chrome_builder.hpp
src/browsers/google_chrome/versions/chrome_145_0_7632_46/: chrome_145_0_7632_46.hpp
src/browsers/google_chrome/versions/chrome_146_0_7680_178/: chrome_146_0_7680_178.hpp
src/browsers/google_chrome/versions/chrome_147_0_7727_56/: chrome_147_0_7727_56.hpp
src/browsers/safari/: safari_builder.cpp  safari_builder.hpp
src/browsers/safari/versions/safari_26_4/: safari_26_4.hpp
src/browsers/yandex_browser/: yandex_browser_builder.cpp  yandex_browser_builder.h  yandex_browser_builder.hpp
src/browsers/yandex_browser/versions/yandex_24_12_0_1772/: yandex_24_12_0_1772.hpp
src/browsers/yandex_browser/versions/yandex_25_8_3_828/: yandex_25_8_3_828.hpp
src/browsers/yandex_browser/versions/yandex_26_3_3_881/: yandex_26_3_3_881.hpp
tests/: CMakeLists.txt
tests/tls/: FirefoxTests.cpp  GoogleChromeBuilderTest.cpp  GoogleChromeTests.cpp  SafariTests.cpp  YandexBrowserTests.cpp
tests/utils/: test_utils.hpp
tools/: capture-handshake.py
tools/chrome_145_0_7632_46/: chrome_145_0_7632_46.hpp
tools/chrome_146_0_7680_178/: chrome_146_0_7680_178.hpp
utils/: .gitignore  capture-handshake.py  get-domains.py
